fixed audiojs spacing for iPhone 4 and iPhone 5

--- a/css/style.less
+++ b/css/style.less
@@ -296,6 +296,7 @@ figure {
 #ux-audio {
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-left: -10px;
 }
 /* end */
 
